# executorch.js

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  bindings.d.ts  bindings.js  install.js  package.json  tsconfig.json
.github/workflows/: build.yml  post-release.yml
lib/: backend.ts  bindings.d.ts  common.ts  index.ts  module.ts  scalar.ts  tensor.ts
src/: bindings.cc  buffer.h  error.h  evalue.cc  evalue.h  module.cc  module.h  sample.cc  sample.h  scalar.cc  scalar.h  tensor.cc  tensor.h  worker.h
tests/: module.spec.ts  run.ts  sample.spec.ts  tensor.spec.ts  tsconfig.json
